NanoVG/nanovg.h

	typedef struct NVGcontext NVGcontext;
	struct NVGglyphPosition {
		const char* str;	// Position of the glyph in the input string.
		float x;			// The x-coordinate of the logical glyph position.
		float minx, maxx;	// The bounds of the glyph shape.
	};
	typedef struct NVGglyphPosition NVGglyphPosition;
	struct NVGtextRow {
		const char* start;	// Pointer to the input text where the row starts.
		const char* end;	// Pointer to the input text where the row ends (one past the last character).
		const char* next;	// Pointer to the beginning of the next row.
		float width;		// Logical width of the row.
		float minx, maxx;	// Actual bounds of the row. Logical with and bounds can differ because of kerning and some parts over extending.
	};
	typedef struct NVGtextRow NVGtextRow;
	// Sets the letter spacing of current text style.
	NANOVG_EXPORT void nvgTextLetterSpacing(NVGcontext* ctx, float spacing);
	// Sets the proportional line height of current text style. The line height is specified as multiple of font size.
	NANOVG_EXPORT void nvgTextLineHeight(NVGcontext* ctx, float lineHeight);
	// Sets the text align of current text style, see NVGalign for options.
	NANOVG_EXPORT void nvgTextAlign(NVGcontext* ctx, int align);
	// Sets the font face based on specified id of current text style.
	NANOVG_EXPORT void nvgFontFaceId(NVGcontext* ctx, int font);
	// Sets the font face based on specified name of current text style.
	NANOVG_EXPORT void nvgFontFace(NVGcontext* ctx, const char* font);
	// Draws text string at specified location. If end is specified only the sub-string up to the end is drawn.
	NANOVG_EXPORT float nvgText(NVGcontext* ctx, float x, float y, const char* string, const char* end);
	// Draws multi-line text string at specified location wrapped at the specified width. If end is specified only the sub-string up to the end is drawn.
	// White space is stripped at the beginning of the rows, the text is split at word boundaries or when new-line characters are encountered.
	// Words longer than the max width are slit at nearest character (i.e. no hyphenation).
	NANOVG_EXPORT void nvgTextBox(NVGcontext* ctx, float x, float y, float breakRowWidth, const char* string, const char* end);
	// Measures the specified text string. Parameter bounds should be a pointer to float[4],
	// if the bounding box of the text should be returned. The bounds value are [xmin,ymin, xmax,ymax]
	// Returns the horizontal advance of the measured text (i.e. where the next character should drawn).
	// Measured values are returned in local coordinate space.
	NANOVG_EXPORT float nvgTextBounds(NVGcontext* ctx, float x, float y, const char* string, const char* end, float* bounds);
	// Measures the specified multi-text string. Parameter bounds should be a pointer to float[4],
	// if the bounding box of the text should be returned. The bounds value are [xmin,ymin, xmax,ymax]
	// Measured values are returned in local coordinate space.
	NANOVG_EXPORT void nvgTextBoxBounds(NVGcontext* ctx, float x, float y, float breakRowWidth, const char* string, const char* end, float* bounds);
	// Calculates the glyph x positions of the specified text. If end is specified only the sub-string will be used.
	// Measured values are returned in local coordinate space.
	NANOVG_EXPORT int nvgTextGlyphPositions(NVGcontext* ctx, float x, float y, const char* string, const char* end, NVGglyphPosition* positions, int maxPositions);
	// Returns the vertical metrics based on the current text style.
	// Measured values are returned in local coordinate space.
	NANOVG_EXPORT void nvgTextMetrics(NVGcontext* ctx, float* ascender, float* descender, float* lineh);
	// Breaks the specified text into lines. If end is specified only the sub-string will be used.
	// White space is stripped at the beginning of the rows, the text is split at word boundaries or when new-line characters are encountered.
	// Words longer than the max width are slit at nearest character (i.e. no hyphenation).
	NANOVG_EXPORT int nvgTextBreakLines(NVGcontext* ctx, const char* string, const char* end, float breakRowWidth, NVGtextRow* rows, int maxRows);