Libraria.NanoVG/NanoVG.cs


		[DllImport(DllName, EntryPoint = "nvgTextLetterSpacing", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextLetterSpacing(IntPtr ctx, float spacing);
		// NANOVG_EXPORT void nvgTextLetterSpacing(IntPtr ctx, float spacing);

		[DllImport(DllName, EntryPoint = "nvgTextLineHeight", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextLineHeight(IntPtr ctx, float lineHeight);
		// NANOVG_EXPORT void nvgTextLineHeight(IntPtr ctx, float lineHeight);

		[DllImport(DllName, EntryPoint = "nvgTextAlign", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextAlign(IntPtr ctx, int align);
		// NANOVG_EXPORT void nvgTextAlign(IntPtr ctx, int align);

		[DllImport(DllName, EntryPoint = "nvgFontFaceId", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FontFaceId(IntPtr ctx, int font);
		// NANOVG_EXPORT void nvgFontFaceId(IntPtr ctx, int font);

		[DllImport(DllName, EntryPoint = "nvgFontFace", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FontFace(IntPtr ctx, string font);
		// NANOVG_EXPORT void nvgFontFace(IntPtr ctx, const char* font);

		[DllImport(DllName, EntryPoint = "nvgText", CallingConvention = CConv, CharSet = CSet)]
		public static extern float Text(IntPtr ctx, float x, float y, string Str, string end);
		// NANOVG_EXPORT float nvgText(IntPtr ctx, float x, float y, const char* string, const char* end);

		[DllImport(DllName, EntryPoint = "nvgTextBox", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextBox(IntPtr ctx, float x, float y, float breakRowWidth, string Str, string end);
		// NANOVG_EXPORT void nvgTextBox(IntPtr ctx, float x, float y, float breakRowWidth, const char* string, const char* end);

		[DllImport(DllName, EntryPoint = "nvgTextBounds", CallingConvention = CConv, CharSet = CSet)]
		public static extern float TextBounds(IntPtr ctx, float x, float y, string Str, string end, float[] bounds);
		// NANOVG_EXPORT float nvgTextBounds(IntPtr ctx, float x, float y, const char* string, const char* end, float* bounds);

		[DllImport(DllName, EntryPoint = "nvgTextBoxBounds", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextBoxBounds(IntPtr ctx, float x, float y, float breakRowWidth, string Str, string end, float[] bounds);
		// NANOVG_EXPORT void nvgTextBoxBounds(IntPtr ctx, float x, float y, float breakRowWidth, const char* string, const char* end, float* bounds);

		[DllImport(DllName, EntryPoint = "nvgTextGlyphPositions", CallingConvention = CConv, CharSet = CSet)]
		public static extern int TextGlyphPositions(IntPtr ctx, float x, float y, string Str, string end, ref NVGglyphPosition positions, int maxPositions);
		// NANOVG_EXPORT int nvgTextGlyphPositions(IntPtr ctx, float x, float y, const char* string, const char* end, NVGglyphPosition* positions, int maxPositions);

		[DllImport(DllName, EntryPoint = "nvgTextMetrics", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TextMetrics(IntPtr ctx, float[] ascender, float[] descender, float[] lineh);
		// NANOVG_EXPORT void nvgTextMetrics(IntPtr ctx, float* ascender, float* descender, float* lineh);

		[DllImport(DllName, EntryPoint = "nvgTextBreakLines", CallingConvention = CConv, CharSet = CSet)]
		public static extern int TextBreakLines(IntPtr ctx, string Str, string end, float breakRowWidth, ref NVGtextRow rows, int maxRows);
		// NANOVG_EXPORT int nvgTextBreakLines(IntPtr ctx, const char* string, const char* end, float breakRowWidth, NVGtextRow* rows, int maxRows);
	}
}